--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Bamboo by reachgyan</title>
+    <title>Bamboo by jujubeweb</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/reachgyan/bamboo">View on GitHub</a>
+    <a id="forkme_banner" href="https://github.com/jujubeweb/bamboo">View on GitHub</a>
     <div class="shell">
 
       <header>
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/reachgyan/bamboo/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/reachgyan/bamboo/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://github.com/jujubeweb/bamboo/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/jujubeweb/bamboo/tarball/master" class="tgz"><em>download</em> .TGZ</a>
         </span>
       </section>
 
@@ -80,7 +80,7 @@
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/reachgyan">reachgyan</a> can be found on <a href="https://github.com/reachgyan/bamboo">GitHub</a></p>
+            <p>this project by <a href="https://github.com/jujubeweb">jujubeweb</a> can be found on <a href="https://github.com/jujubeweb/bamboo">GitHub</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
